# coursera

./: .gitignore
advanced_learning_algorithms/week1/lab1/: README.md  pyproject.toml
advanced_learning_algorithms/week1/lab1/lab1/: __init__.py
regression_classification/lab2/: pyproject.toml
regression_classification/lab2/lab2/: __init__.py
regression_classification/lab2/tests/: __init__.py
