[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["jarrilla <jarrilla@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lab2 = "lab2:main"
test = "tests:test_all"