[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["jarrilla <jarrilla@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = ">=1.26.0,<2.1.0"
matplotlib = "^3.9.2"
tensorflow = "^2.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lab1 = "lab1:main"
